syntax = "proto3";

package proto.auth;

option go_package = "github.com/npavlov/go-password-manager/proto/auth";

import "buf/validate/validate.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string username = 1 [(buf.validate.field).string.min_len = 3];
  string email = 2 [(buf.validate.field).string.email = true];
  string password = 3 [(buf.validate.field).string.min_len = 8];
}

message RegisterResponse {
  string token = 1;
  string user_key = 2;
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string.min_len = 3];
  string password = 2 [(buf.validate.field).string.min_len = 8];
}

message LoginResponse {
  string token = 1;
}